--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -101,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:inputType="phone"
+            android:inputType="textEmailAddress"
             android:hint="@string/email"
             android:gravity="center"
             android:background="@drawable/login_field_design"
@@ -113,7 +113,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:inputType="phone"
+            android:inputType="textPassword"
             android:hint="@string/password"
             android:gravity="center"
             android:background="@drawable/login_field_design"
