--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activities.settingsActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +32,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/user_img"
             android:background="@mipmap/ic_launcher"
             android:layout_marginStart="10dp"/>
 
@@ -34,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/ayman"
+            android:id="@+id/name_value"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
@@ -49,7 +56,7 @@
         android:layout_below="@id/lin_settings">
 
         <EditText
-            android:id="@+id/username_regiser"
+            android:id="@+id/username_edit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="50dp"
@@ -91,7 +98,7 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/phone_regiser"
+            android:id="@+id/phone_edit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
@@ -103,12 +110,24 @@
             android:layout_marginEnd="60dp"/>
 
         <EditText
-            android:id="@+id/pass_regiser"
+            android:id="@+id/pass_edit"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
             android:inputType="phone"
             android:hint="@string/password"
+            android:gravity="center"
+            android:background="@drawable/login_field_design"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"/>
+
+        <EditText
+            android:id="@+id/mail_edit"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
+            android:inputType="textEmailAddress"
+            android:hint="@string/email"
             android:gravity="center"
             android:background="@drawable/login_field_design"
             android:layout_marginStart="60dp"
@@ -138,4 +157,6 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
