--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -16,8 +16,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center_vertical"
         android:onClick="openGallery"
         android:contentDescription="@string/nav_header_desc"
@@ -38,13 +38,14 @@
             android:textColor="@color/white"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textSize="16sp"
+            android:textSize="14sp"
+            android:gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:textColor="@color/white"
             android:text="@string/ayman_algebaly"
@@ -61,7 +62,7 @@
             android:gravity="center"
             android:text="@string/settings"
             android:onClick="settingstxt"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="@color/white" />
 
     </LinearLayout>
