--- a/app/src/main/res/layout/activity_view_my_rates.xml
+++ b/app/src/main/res/layout/activity_view_my_rates.xml
@@ -7,26 +7,62 @@
     android:background="@color/backg"
     tools:context=".ui.activities.ViewMyRatesActivity">
 
-    <ImageView
-        android:id="@+id/img_movie_myrates_design"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
+        android:layout_height="50dp"
+        android:background="@color/moov_two">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/my_rates"
+                    android:textColor="@color/white"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="50dp"
+        android:id="@+id/rcv_movie_myrates_design"
+        android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_height="250dp" />
 
     <me.zhanghai.android.materialratingbar.MaterialRatingBar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="100dp"
-        android:layout_marginStart="100dp"
-        android:layout_below="@id/img_movie_myrates_design"
+        android:layout_height="30dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="10dp"
+        android:scaleX="1"
+        android:isIndicator="true"
+        android:scaleY="1"
+        android:layout_below="@id/rcv_movie_myrates_design"
         android:id="@+id/rating_bar_rate_design"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:background="@color/back_comment"
         android:layout_below="@id/rating_bar_rate_design"
         android:id="@+id/txt_value_comment_view"
-        android:layout_margin="10dp"
-        />
+        android:layout_margin="20dp" />
 
 </RelativeLayout>
