--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -18,6 +18,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="60dp"
+            android:id="@+id/img_contact"
             android:layout_height="60dp"
             android:background="@mipmap/ic_launcher"
             android:layout_margin="5dp"/>
@@ -33,6 +34,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/hallo"
+                android:id="@+id/hallo_contact"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
                 android:textColor="@color/black"
@@ -43,7 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="@string/ayman"
+                android:text=""
+                android:id="@+id/name_contact"
                 android:gravity="center_horizontal"
                 android:layout_gravity="bottom"
                 android:textColor="@color/black"
@@ -61,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/how_can_we_help_you"
+            android:id="@+id/txt_contact"
             android:textColor="@color/gray_two"
             android:gravity="center_horizontal"
             android:layout_marginTop="50dp"/>
@@ -71,6 +75,7 @@
             android:background="@drawable/curv_gray_field"
             android:layout_margin="40dp"
             android:hint="@string/message"
+            android:id="@+id/msg_contact"
             android:textColorHint="@color/white"
             android:gravity="center"/>
 
@@ -80,6 +85,7 @@
             android:layout_marginStart="60dp"
             android:layout_marginEnd="60dp"
             android:hint="@string/ayman_yahoo_com"
+            android:id="@+id/mail_contact"
             android:textColorHint="@color/white"
             android:gravity="center"
             android:background="@drawable/curv_gray_field"/>
@@ -90,6 +96,7 @@
             android:text="@string/send_message"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:id="@+id/send_txt_btn_contact"
             android:layout_marginTop="50dp"
             android:textStyle="bold"
             android:gravity="center_horizontal"/>
