--- a/app/src/main/res/layout/movie_design.xml
+++ b/app/src/main/res/layout/movie_design.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,7 +14,8 @@
         <ImageView
             android:id="@+id/img_movie_rcv_design"
             android:layout_width="match_parent"
-            android:layout_height="250dp" />
+            android:layout_height="250dp"
+            android:layout_margin="5dp"/>
 
     </RelativeLayout>
 
