--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -15,11 +15,10 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_header"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_gravity="center_vertical"
-        android:onClick="openGallery"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
@@ -35,6 +34,7 @@
             android:layout_weight="1"
             android:layout_height="0dp"
             android:text="@string/welcome"
+            android:id="@+id/welcome_txt"
             android:textColor="@color/white"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
@@ -45,10 +45,11 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="14sp"
+            android:id="@+id/name_value_header"
             android:gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:textColor="@color/white"
-            android:text="@string/ayman_algebaly"
+            android:text=""
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <TextView
